# honeclaw

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  CASES_EN.md  CASES_ZH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  README_ZH.md  SECURITY.md  config.example.yaml  fix_logs.py  gitleaks.toml  launch.sh  make_dmg_release.sh  package.json  soul.md  tsconfig.base.json
agents/function_calling/: Cargo.toml
agents/function_calling/src/: lib.rs
agents/gemini_cli/: Cargo.toml
agents/gemini_cli/src/: lib.rs
bins/hone-cli/: Cargo.toml
bins/hone-cli/src/: cleanup.rs  cloud.rs  common.rs  configure.rs  discord_token.rs  display.rs  i18n.rs  main.rs  mutations.rs  onboard.rs  probe.rs  prompts.rs  repl.rs  reports.rs  start.rs  web.rs  yaml_io.rs
bins/hone-desktop/: Cargo.toml  build.rs  tauri.conf.json
bins/hone-desktop/icons/: icon.icns
bins/hone-desktop/src/: commands.rs  main.rs  sidecar.rs  tray.rs
bins/hone-desktop/src/sidecar/: processes.rs  runtime_env.rs  settings.rs
bins/hone-discord/: Cargo.toml
bins/hone-discord/src/: attachments.rs  group_reply.rs  handlers.rs  main.rs  scheduler.rs  types.rs  utils.rs
bins/hone-feishu/: Cargo.toml
bins/hone-feishu/src/: card.rs  client.rs  handler.rs  listener.rs  main.rs  markdown.rs  outbound.rs  scheduler.rs  types.rs
bins/hone-imessage/: Cargo.toml
bins/hone-imessage/src/: main.rs
bins/hone-telegram/: Cargo.toml
bins/hone-telegram/src/: handler.rs  listener.rs  main.rs  markdown_v2.rs  scheduler.rs  types.rs
crates/hone-channels/: Cargo.toml
crates/hone-channels/examples/: finance_consistency_llm_smoke.rs  heartbeat_prompt_llm_smoke.rs  progress_watchdog_live_smoke.rs
crates/hone-channels/src/: agent_session.rs  attachments.rs  bootstrap.rs  core.rs  core_traits.rs  execution.rs  ingress.rs  investment_response_guard.rs  kb_analysis.rs  lib.rs  mcp_bridge.rs  outbound.rs  prompt.rs  prompt_audit.rs  response_finalizer.rs  run_event.rs  runners.rs  runtime.rs  sandbox.rs  scheduler.rs  security_identifier.rs  session_compactor.rs  think.rs  tool_trace.rs  turn_builder.rs
crates/hone-channels/src/agent_session/: artifacts.rs  core.rs  emitter.rs  guard.rs  helpers.rs  mod.rs  progress.rs  restore.rs  tests.rs  types.rs
crates/hone-channels/src/attachments/: ingest.rs  vector_store.rs  vision.rs
crates/hone-channels/src/core/: bot_core.rs  config_loader.rs  intercept.rs  logging.rs  mod.rs  tests.rs
crates/hone-channels/src/core_traits/: admin.rs  audit.rs  llm.rs  mod.rs  path.rs  runner.rs  tests.rs  tool_registry.rs
crates/hone-channels/src/runners/: acp_common.rs  codex_acp.rs  gemini_acp.rs  gemini_cli.rs  hone_cloud.rs  multi_agent.rs  opencode_acp.rs  tests.rs  tool_reasoning.rs  types.rs
crates/hone-core/: Cargo.toml
crates/hone-core/src/: actor.rs  agent.rs  api_key_pool.rs  audit.rs  channel_process.rs  cloud_runtime.rs  config.rs  error.rs  heartbeat.rs  lib.rs  logging.rs  process_lock.rs  provider_symbol.rs  quiet.rs  security.rs  task_observer.rs  text.rs  time.rs  tool_effect.rs  tool_event.rs
crates/hone-core/src/config/: agent.rs  channels.rs  event_engine.rs  materialize.rs  mod.rs  mutation.rs  server.rs  tests.rs  yaml.rs
crates/hone-event-engine/: Cargo.toml
crates/hone-event-engine/examples/: distill_first_wave.rs  news_llm_e2e.rs  per_actor_override_e2e.rs  push_smoke.rs
crates/hone-event-engine/src/: daily_report.rs  digest.rs  engine.rs  event.rs  fmp.rs  lib.rs  news_classifier.rs  pipeline.rs  polisher.rs  prefs.rs  renderer.rs  router.rs  source.rs  spawner.rs  store.rs  subscription.rs  tests.rs
crates/hone-event-engine/src/digest/: buffer.rs  curation.rs  mod.rs  payload.rs  render.rs  scheduler.rs  tests.rs  time_window.rs
crates/hone-event-engine/src/global_digest/: audience.rs  collector.rs  curator.rs  event_dedupe.rs  fetcher.rs  mainline_cron.rs  mainline_distill.rs  mod.rs  renderer.rs  scheduler.rs  thesis_cron.rs  thesis_distill.rs
crates/hone-event-engine/src/pollers/: analyst_grade.rs  corp_action.rs  earnings.rs  earnings_quality.rs  earnings_surprise.rs  extended_hours.rs  macro_events.rs  mod.rs  news.rs  price.rs  rss.rs  sec_enrichment.rs
crates/hone-event-engine/src/router/: classify.rs  config.rs  dispatch.rs  mod.rs  policy.rs  sink.rs  stats.rs  tests.rs
crates/hone-event-engine/src/sinks/: discord.rs  discord_embed.rs  feishu.rs  feishu_card.rs  http_error.rs  imessage.rs  mod.rs  multi.rs  telegram.rs
crates/hone-event-engine/src/unified_digest/: collector.rs  floor.rs  mod.rs  scheduler.rs  types.rs
crates/hone-integrations/: Cargo.toml
crates/hone-integrations/src/: feishu_facade.rs  lib.rs  nano_banana.rs  x_client.rs
crates/hone-llm/: Cargo.toml
crates/hone-llm/examples/: llm_profile_poc.rs
crates/hone-llm/src/: lib.rs  openai_compatible.rs  openrouter.rs  provider.rs  resolver.rs
crates/hone-scheduler/: Cargo.toml
crates/hone-scheduler/src/: lib.rs
crates/hone-tools/: Cargo.toml
crates/hone-tools/src/: base.rs  company_profile.rs  cron_job_tool.rs  data_fetch.rs  deep_research.rs  discover_skills.rs  guard.rs  kb_search.rs  lib.rs  load_skill.rs  local_files.rs  missed_events_tool.rs  notification_prefs_tool.rs  portfolio_tool.rs  registry.rs  restart_hone.rs  schedule_view.rs  skill_registry.rs  skill_runtime.rs  skill_tool.rs  test_support.rs  web_search.rs
crates/hone-web-api/: Cargo.toml
crates/hone-web-api/src/: aliyun_captcha.rs  aliyun_sms.rs  cloud_oss.rs  lib.rs  logging.rs  public_auth.rs  runtime.rs  state.rs  types.rs
crates/hone-web-api/src/routes/: auth.rs  channel_settings.rs  chat.rs  common.rs  company_profiles.rs  cron.rs  events.rs  kb.rs  (+22 more)
memory/: Cargo.toml  agents.md
memory/src/: company_profile.rs  cron_job.rs  kb.rs  lib.rs  llm_audit.rs  password.rs  portfolio.rs  quota.rs  session.rs  session_sqlite.rs  web_auth.rs
memory/src/company_profile/: markdown.rs  mod.rs  storage.rs  tests.rs  transfer.rs  types.rs
memory/src/cron_job/: history.rs  mod.rs  schedule.rs  storage.rs  types.rs
(+985 files in other folders)
