[workspace]
resolver = "2"
members = [
    "crates/hone-core",
    "crates/hone-llm",
    "crates/hone-tools",
    "agents/function_calling",
    "agents/gemini_cli",
    "agents/codex_cli",
    "memory",
    "crates/hone-integrations",
    "crates/hone-scheduler",
    "crates/hone-channels",
    "crates/hone-event-engine",
    "bins/hone-imessage",
    "bins/hone-feishu",
    "bins/hone-console-page",
    "crates/hone-web-api",
    "bins/hone-discord",
    "bins/hone-telegram",
    "bins/hone-cli",
    "bins/hone-desktop",
    "bins/hone-mcp",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["Hone Financial"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# OpenAI API
async-openai = "0.29"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "fmt"] }
tracing-appender = "0.2"

# Async trait
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# SQLite (for iMessage chat.db)
rusqlite = { version = "0.31", features = ["bundled"] }

# Regex
regex = "1"
subtle = "2"

# HTML 解析 (Telegram 公开频道 web preview)
scraper = "0.20"

# Internal crates
hone-core = { path = "crates/hone-core" }
hone-llm = { path = "crates/hone-llm" }
hone-tools = { path = "crates/hone-tools" }
hone-agent = { path = "agents/function_calling" }
hone-agent-gemini-cli = { path = "agents/gemini_cli" }
hone-agent-codex-cli = { path = "agents/codex_cli" }
hone-memory = { path = "memory" }
hone-integrations = { path = "crates/hone-integrations" }
hone-scheduler = { path = "crates/hone-scheduler" }
hone-channels  = { path = "crates/hone-channels" }
hone-web-api   = { path = "crates/hone-web-api" }
hone-event-engine = { path = "crates/hone-event-engine" }
