[package]
name = "hone-agent"
version.workspace = true
edition.workspace = true

[dependencies]
hone-core = { workspace = true }
hone-llm = { workspace = true }
hone-tools = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true }
