[package]
name = "hone-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hone-cli"
path = "src/main.rs"

[dependencies]
hone-core = { workspace = true }
hone-channels = { workspace = true }
hone-memory = { workspace = true }
hone-agent = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
