[package]
name = "hone-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hone-cli"
path = "src/main.rs"

[dependencies]
hone-core = { workspace = true }
hone-channels = { workspace = true }
hone-memory = { workspace = true }
hone-agent = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
# `console` 已经是 dialoguer 的 transitive 依赖;提成直接依赖,用来在 onboard /
# configure 输出里加彩色 section 分隔、警告、成功标记,避免视觉上全是白字堆叠。
console = "0.15"
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
