[package]
name = "hone-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hone-core    = { workspace = true }
hone-web-api = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
tokio        = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
tauri        = { version = "2", features = [] }
tauri-plugin-shell = "2"
rfd = "0.15"
