[package]
name = "hone-discord"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hone-discord"
path = "src/main.rs"

[dependencies]
hone-core = { workspace = true }
hone-channels = { workspace = true }
hone-scheduler = { workspace = true }
hone-memory = { workspace = true }
hone-tools = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "native_tls_backend"] }
