[package]
name = "hone-telegram"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hone-telegram"
path = "src/main.rs"

[dependencies]
hone-core = { workspace = true }
hone-channels = { workspace = true }
hone-scheduler = { workspace = true }
hone-memory = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
teloxide = { version = "0.13", features = ["macros"] }
fs2 = "0.4"
