[package]
name = "hone-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
fs2 = "0.4"
base64 = { workspace = true }
hmac = { workspace = true }
percent-encoding = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
tokio-postgres = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "3"
