[package]
name = "hone-event-engine"
version.workspace = true
edition.workspace = true

[dependencies]
hone-core = { workspace = true }
hone-memory = { workspace = true }
hone-llm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
futures = { workspace = true }
serde_yaml = { workspace = true }

[[example]]
name = "push_smoke"
path = "examples/push_smoke.rs"
