[package]
name = "hone-event-engine"
version.workspace = true
edition.workspace = true

[dependencies]
hone-core = { workspace = true }
hone-memory = { workspace = true }
hone-llm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
futures = { workspace = true }
serde_yaml = { workspace = true }

[[example]]
name = "push_smoke"
path = "examples/push_smoke.rs"

[[example]]
name = "news_llm_e2e"
path = "examples/news_llm_e2e.rs"

[[example]]
name = "per_actor_override_e2e"
path = "examples/per_actor_override_e2e.rs"
