[package]
name = "hone-integrations"
version.workspace = true
edition.workspace = true

[dependencies]
hone-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-openai = { workspace = true }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
uuid = { workspace = true }
chrono = { workspace = true }
url = "2"
mime_guess = "2"
regex = "1"
