[package]
name = "hone-integrations"
version.workspace = true
edition.workspace = true

[dependencies]
hone-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1"
