[package]
name = "hone-llm"
version.workspace = true
edition.workspace = true

[dependencies]
hone-core = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
