[package]
name = "hone-tools"
version.workspace = true
edition.workspace = true

[dependencies]
hone-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
hone-memory = { workspace = true }
chrono = { workspace = true }
